--- a/src/Makefile
+++ b/src/Makefile
@@ -5,6 +5,8 @@ SANITIZER:= #-fsanitize=address
 CFLAGS_TEST:= $(SANITIZER) --coverage -c -g 
 MATH_FUNC:=s21*.c
 MATH_OBJ:=s21*.o
+TEST_DIR:= tests
+TEST_FUNC:= $(wildcard $(TEST_DIR)/test_s21*.c)
 MATH_TEST:= math_tests.c
 
 all: s21_math.a test clean cpplint
@@ -15,7 +17,7 @@ s21_math.a: clean_lib $(MATH_FUNC)
 	ranlib 	s21_math.a
 
 test: clean_bin s21_math.a 
-	$(CC) $(LFLAGS) tests/test_s21_acos.c s21_math.a $(MATH_TEST) -o test
+	$(CC) $(LFLAGS) $(TEST_FUNC) s21_math.a $(MATH_TEST) -o test
 	- ./test
 
 gcov_report: clean $(MATH_FUNC)
