:star: update(Makefile): new makefile, refactor WIP

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,15 +7,18 @@ TEST_FLAGS  := --coverage -c -g
 OBJ_DIR     := obj
 TEST_SRC_DIR:= tests
 TEST_OBJ_DIR:= tests_obj
+GCOV_OBJ_DIR:= gcov_res
 
 TEST_SRC  := $(shell find $(TEST_SRC_DIR) -maxdepth 1 -name "*.c")
 MATH_SRC  := $(wildcard s21*.c)
 
 TEST_OBJ  := $(addprefix $(TEST_OBJ_DIR)/, $(notdir $(TEST_SRC:.c=.o)))
 MATH_OBJ  := $(addprefix $(OBJ_DIR)/, $(patsubst %.c, %.o, $(MATH_SRC)))
+GCOV_OBJ  := $(addprefix $(GCOV_OBJ_DIR)/, $(patsubst %.c, %.o, $(MATH_SRC)))
+
 MATH_TEST := math_tests.c
 
-all: test clean cpplint
+all: cpplint test clean 
 
 test: s21_math.a $(TEST_OBJ_DIR)/main.o $(TEST_OBJ)
 	@$(CC) $(LFLAGS) $(TEST_OBJ) $(TEST_OBJ_DIR)/main.o s21_math.a -o test
@@ -27,7 +30,7 @@ s21_math.a: $(MATH_OBJ)
 
 $(OBJ_DIR)/%.o: %.c
 	@mkdir -p $(OBJ_DIR)
-	$(CC) -c $^ -o $@
+	$(CC) $(CFLAGS) -c $^ -o $@
 
 $(TEST_OBJ_DIR)/main.o: $(MATH_TEST) 
 	@mkdir -p $(TEST_OBJ_DIR)
@@ -35,18 +38,22 @@ $(TEST_OBJ_DIR)/main.o: $(MATH_TEST)
 
 $(TEST_OBJ_DIR)/%.o: $(TEST_SRC_DIR)/%.c
 	@mkdir -p $(TEST_OBJ_DIR)
-	$(CC) $(LFLAGS) -c $^ -o $@
+	$(CC) $(CFLAGS) $(LFLAGS) -c $^ -o $@
 
-gcov_report: $(MATH_FUNC)
-	$(CC) $(TEST_FLAGS) $(MATH_FUNC)
-	ar rc s21_math.a $(MATH_OBJ)
+
+gcov_report: $(GCOV_OBJ) $(MATH_SRC)
+	ar rc s21_math.a $(GCOV_OBJ)
 	ranlib 	s21_math.a
-	- $(CC) $(LFLAGS) --coverage $(TEST_FUNC) s21_math.a $(MATH_TEST) -o test
+	- $(CC) $(LFLAGS) --coverage $(TEST_SRC) s21_math.a $(MATH_TEST) -o test
 	- ./test
 	./../materials/lcov/bin/lcov -f -c --directory . -o ./coverage.info 
 	./../materials/lcov/bin/genhtml coverage.info --output-directory=res
 	rm -f *.gcda *.gcov *.o *.gcno
 	open res/index.html
+
+$(GCOV_OBJ_DIR)/%.o: %.c
+	@mkdir -p $(GCOV_OBJ_DIR)
+	$(CC) $(CFLAGS) $(TEST_FLAGS) $^ -o $@
 
 
 .PHONY: clean clean_lib clean_bin
@@ -62,13 +69,16 @@ clean_lib:
 
 clean_bin:
 	rm -f $(MATH_OBJ) 
+	rm -f $(TEST_OBJ) 
+
+rebuild: clean clean_lib clean_bin all
 
 cpplint: ${MATH_SRC} ${TEST_SRC} *.h
 ifeq ("","$(wildcard ./CPPLINT.cfg)")
-	cp -f ../materials/linters/CPPLINT.cfg ./CPPLINT.cfg
+	@cp -f ../materials/linters/CPPLINT.cfg ./CPPLINT.cfg
 endif
 	@!(python3 ../materials/linters/cpplint.py --extensions=c $^ | grep -q :)
-	rm -f CPPLINT.cfg
-	!(grep -r '<math.h>' s21*)
+	@rm -f CPPLINT.cfg
+	@!(grep -r '<math.h>' s21*)
 
 
