:white_check_mark: update(fmod_test): add failing test

--- a/src/Makefile
+++ b/src/Makefile
@@ -25,7 +25,7 @@ test: s21_math.a $(TEST_OBJ_DIR)/main.o $(TEST_OBJ)
 	$(CC) $(LFLAGS) $(TEST_OBJ) $(TEST_OBJ_DIR)/main.o s21_math.a -o test
 	- ./test
 
-s21_math.a: clean_lib $(MATH_OBJ)
+s21_math.a: $(MATH_OBJ)
 	ar rc s21_math.a $(MATH_OBJ)
 	ranlib 	s21_math.a
 
@@ -42,14 +42,14 @@ $(TEST_OBJ_DIR)/%.o: $(TEST_SRC_DIR)/%.c
 	$(CC) $(INC_CHECK) -c $^ -o $@
 
 
-gcov_report: clean_lib $(TEST_OBJ_DIR)/main.o $(GCOV_OBJ) $(MATH_SRC)
+gcov_report: $(TEST_OBJ_DIR)/main.o $(GCOV_OBJ) $(MATH_SRC)
 	ar rc s21_math.a $(GCOV_OBJ)
 	ranlib 	s21_math.a
 	$(CC) $(LFLAGS) --coverage $(TEST_OBJ) $(TEST_OBJ_DIR)/main.o s21_math.a -o test
 	- ./test
 	./../materials/lcov/bin/lcov -f -c --directory . -o ./coverage.info 
 	./../materials/lcov/bin/genhtml coverage.info --output-directory=res
-	rm -f *.gcda *.gcov *.o *.gcno
+	#rm -f *.gcda *.gcov *.o *.gcno
 	open res/index.html
 
 $(GCOV_OBJ_DIR)/%.o: %.c
